# rust_forvo_api

./: Cargo.toml  README.md  build.rs
src/: ankiconnect.rs  config.rs  lib.rs  main.rs
