[package]
name = "rust_forvo_api"
version = "0.4.1"
edition = "2021"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
unicode-normalization = "0.1.21"
futures = "0.3"
dirs = "4.0"

[build-dependencies]
vergen = "6.0"

[lib]
name = "rust_forvo_api"
path = "src/lib.rs"
